frontend: add image cropping, detailed ml suggestions when adding photos, simple datetimepicker, custom identification field, map pin fix on add observation form

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "maplibre-gl/dist/maplibre-gl.css";
 
 :root {
   --background: #ffffff;
@@ -23,4 +24,21 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Custom styles for our Date Time Picker to make it more legible */
+.bs-daypicker {
+  --rdp-accent-color: #059669; /* Emerald 600 */
+  --rdp-background-color: #ecfdf5; /* Emerald 50 */
+  --rdp-outline: 2px solid var(--rdp-accent-color);
+  --rdp-outline-selected: 2px solid rgba(0, 0, 0, 0);
+  margin: 0;
+}
+
+.bs-daypicker .rdp-day_selected {
+  font-weight: bold;
+}
+
+.bs-daypicker .rdp-button:hover:not([disabled]):not(.rdp-day_selected) {
+  background-color: #f5f5f4; /* Stone 100 */
 }
